<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.micromata.mgc</groupId>
  <artifactId>de.micromata.mgc.rootpom</artifactId>
  <version>3.0.0</version>
  <packaging>pom</packaging>

  <organization>
    <name>Micromata GmbH</name>
    <url>https://labs.micromata.de/mgc</url>
  </organization>
  <inceptionYear>2016</inceptionYear>
  <developers>
    <developer>
      <id>r.kommer</id>
      <name>Roger Kommer</name>
      <email>kommer@extern.micromata.de/kommer@artefaktur.com</email>
      <organization>Micromata GmbH</organization>
      <organizationUrl>http://www.micromata.com</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>-1</timezone>
    </developer>
  </developers>
  <contributors>
  </contributors>

  <licenses>
    <license>
      <name>Apache 2.0</name>
      <url>/LICENSE.txt</url>
      <comments>All rights reserved.</comments>
      <distribution>manual</distribution>
    </license>
  </licenses>
  <distributionManagement>
    <repository>
      <id>MGC</id>
      <name>MGC</name>
      <url>https://labs.micromata.de/nexus/content/repositories/MGC/</url>
    </repository>
    <snapshotRepository>
      <id>MGC-snapshot</id>
      <name>MGC-snapshot</name>
      <url>https://labs.micromata.de/nexus/content/repositories/MGC-snapshot/</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <mgc.version>${project.version}</mgc.version><!-- MGCVERSION -->


    <log4j.version>1.2.17</log4j.version>


    <junit.version>4.12</junit.version>

    <!-- COMMONS VERSIONS -->
    <commons-lang3.version>3.7</commons-lang3.version>
    <commons-io.version>2.6</commons-io.version>
    <commons-beanutils.version>1.9.3</commons-beanutils.version>
    <commons-collections.version>4.1</commons-collections.version>
    <commons-text.version>1.1</commons-text.version>
    <commons-codec.version>1.11</commons-codec.version>
    <commons-dbcp2.version>2.1.1</commons-dbcp2.version>

    <org.codehaus.groovy.groovy-all.version>2.4.12</org.codehaus.groovy.groovy-all.version>

    <!-- JAVAX VERSIONS -->
    <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
    <javax.servlet.jsp.api.version>2.3.1</javax.servlet.jsp.api.version>
    <javax.mail.version>1.6.0</javax.mail.version>

    <jetty.version>9.3.7.v20160115</jetty.version>

    <org.hibernate-search-orm.version>5.5.7.Final</org.hibernate-search-orm.version>
    <org.apache.lucene.version>5.3.1</org.apache.lucene.version>
    <!-- old 4.1.9.Final -->
    <org.hibernate.hibernate-entitymanager.version>5.0.12.Final</org.hibernate.hibernate-entitymanager.version>

    <spring.version>4.3.12.RELEASE</spring.version>
    <spring-boot.version>1.3.1.RELEASE</spring-boot.version>

    <org.apache.derby.version>10.12.1.1</org.apache.derby.version>

    <hsqldb.version>2.3.3</hsqldb.version>
    <genome.mvn.plugin.version>2.9.0</genome.mvn.plugin.version>
    <spring-boot.jetty.version>9.2.14.v20151106</spring-boot.jetty.version>
    <minimal-json.version>0.9.4</minimal-json.version>
    <xstream.version>1.4.10</xstream.version>
    <javax.transaction-api.version>1.2</javax.transaction-api.version>
    <activation.version>1.1.1</activation.version>



    <!-- MAVEN PLUGINS VERSIONS -->
    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
    <license-maven-plugin.version>3.0</license-maven-plugin.version>
    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
    <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
    <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
    <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
    <!-- EO MAVEN PLUGINS VERSIONS -->


  </properties>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>de.micromata.mgc.common</module>
        <module>de.micromata.mgc.common.test</module>
        <module>de.micromata.mgc.util.xml</module>
        <module>de.micromata.mgc.logging</module>
        <module>de.micromata.mgc.logging.spi.ifiles</module>
        <module>de.micromata.mgc.jdbc.trace</module>
        <module>de.micromata.mgc.jpa.emgr</module>
        <module>de.micromata.mgc.jpa.tabattr</module>
        <module>de.micromata.mgc.jpa.history</module>
        <module>de.micromata.mgc.jpa.normsearch</module>
        <module>de.micromata.mgc.jpa.hibernatesearch</module>
        <module>de.micromata.mgc.jpa.spring</module>
        <module>de.micromata.mgc.jpa.xmldump</module>
        <module>de.micromata.mgc.jpa.logging</module>
        <module>de.micromata.mgc.email</module>
        <module>de.micromata.mgc.application</module>
        <module>de.micromata.mgc.application.webserver</module>
        <module>de.micromata.mgc.application.jetty</module>
        <module>de.micromata.mgc.application.springboot</module>
        <module>de.micromata.mgc.javafx.launcher</module>
        <module>de.micromata.mgc.chronos</module>
        <module>de.micromata.mgc.chronos.jpa</module>

        <module>samples</module>
      </modules>
    </profile>

    <profile>
      <id>empty</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <modules>
      </modules>
    </profile>

    <!--Code quality. -->
    <profile>
      <id>sonar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sonar.jdbc.url>jdbc:oracle:thin:@192.168.76.31/vlsits</sonar.jdbc.url>
        <sonar.jdbc.username>VLS_SONAR</sonar.jdbc.username>
        <sonar.jdbc.password>vls_sonar</sonar.jdbc.password>
        <sonar.host.url>https://vls-its:8999/</sonar.host.url>
        <!-- use next part when locally installed sonar is running -->
        <!--<sonar.jdbc.url>jdbc:h2:tcp://localhost:9092/sonar</sonar.jdbc.url> <sonar.jdbc.username>sonar</sonar.jdbc.username>
          <sonar.jdbc.password>sonar</sonar.jdbc.password> <sonar.host.url>http://localhost:9000/</sonar.host.url> -->
        <sonar.exclusions>
          **/src-gen/**/*.java,**/genome-tools/**/*.java,**/plugins/umgmt/**/*,**/plugins/popstats/**/*,**/GenomeDaoManager.java,**/UmgmtDaoManager.java,**/Emgr.java,**/EmgrFactory.java
        </sonar.exclusions>
      </properties>
      <modules>

      </modules>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <inherited>true</inherited>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <attach>true</attach>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit47</artifactId>
            <version>${maven-surefire-plugin.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <testFailureIgnore>false</testFailureIgnore>
        </configuration>
      </plugin>
      <plugin>
        <!-- use license:format or license:update to patch java lisence header -->
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${license-maven-plugin.version}</version>
        <configuration>
          <header>distribution/JavaHeader.txt</header>
          <properties>
            <owner>Micromata GmbH</owner>
            <email>info@micromata.de</email>
          </properties>
          <mapping>
            <java>DOUBLESLASH_STYLE</java>
          </mapping>
          <includes>
            <include>**/*.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>${maven-install-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven-resources-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
      </plugin>
    </plugins>
  </build>


  <scm>
    <url>https://github.com/micromata/mgc.git</url>
    <developerConnection>Roger Rene Kommer</developerConnection>
  </scm>
  <issueManagement>
    <system>JIRA</system>
    <url>https://labs.micromata.de/jira/projects/MGC</url>
  </issueManagement>
  <url>https://labs.micromata.de/mgc</url>
</project>